--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ button.restart{
     font-size: 24px;
     padding: 10px 30px;
     border-radius: 8px;
+    border: 4px solid var(--violet);
     background-color: var(--periwinkle);
     color: var(--violet);
 }
